k8s/backend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arn-backend-api
  namespace: automated-release-notes-prod
  labels:
    app: backend-api
    tier: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
    spec:
      containers:
        - name: fastapi-gateway
          image: acrarnprod.azurecr.io/devopstrio/arn-backend:v2.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: arn-backend-svc
  namespace: automated-release-notes-prod
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
