k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arn-platform-ingress
  namespace: automated-release-notes-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - releases.devopstrio.co.uk
    secretName: arn-tls-secret
  rules:
  - host: releases.devopstrio.co.uk
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: arn-backend-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arn-portal-svc
            port:
              number: 80
